<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">欢迎</string>
    <string name="app_name">资产盘点系统</string>
    <string name="select_file">选择文件</string>
    <string name="confirm_inventory">确认匹配</string>
    <string name="deny_inventory">错误/重扫</string>
    <string name="inventory_result_title">盘点结果</string>
    <string name="result_normal">正常</string>
    <string name="result_missing">盘亏</string>
    <string name="result_profit">盘盈</string>
    <string name="duplicate_check">已正常盘点</string>
    <string name="cell_selection_new_option">新增信息或从下面选择</string>
    <string name="action_assign">分配</string>
    <string name="btn_update">更新</string>
    <string name="bar_col_selection_tip">条形码位于下面哪一列？</string>
    <string name="tip_file_selected">已选择文件名：</string>
    <string name="tip_barcode_col">已指定条码列：</string>
    <string name="clear_pref">清除记录/重选文件</string>
    <string name="start_checking">开始盘点</string>
    <string name="unknow_barcode">未发现此条码，请填写信息</string>
    <string name="err_file_open">出错了，打不开文件。</string>
    <string name="menu_settings">设置</string>
    <string name="title_section1">区域1</string>
    <string name="title_section2">区域2</string>
    <string name="title_section3">区域3</string>
    <string name="sucess_file_open">打开文件成功</string>
    <string name="page_title_1">待盘点</string>
    <string name="page_title_2">已盘点</string>
    <string name="about">关于</string>
    <string name="can_not_modify">不能编辑</string>
    <string name="intro">简介:\n这个软件是用来给那些没有配盘点条码扫描枪，还需要手工盘点固定资产的苦逼们使用\n。目前仅支持Excel的盘点文件（大家从财务导出来的都是这个类型吧，呵呵）。\n注意事项:\n.xls文件第一行需要是标题，类似于“物品名”、“序列号”、“物品位置”等，后面的行都是固定资产，每行一条，条形码需要唯一，否则没法扫描。\n使用方法:\n第一次使用会提示打开.xls文件，你指定好后，会列出第一行的标题，你需要指出需要扫描的条形码所在的“列名称”，然后就可以扫了。\n扫描完成后把这个.xls文件拷出去即可。\n如果这个资产有些变动，在扫描出来结果后也可以手工更改每一列的信息（条形码除外）。\n作者:杨柏\n联系方式:gyangbo@gmail.com\n微博:http://t.qq.com/yang___bo(都用到3个下划线了...)\n×版权没有，出错不管×</string>
    <string name="yes">是</string>
    <string name="quit_programe">退出盘点吗？</string>
    <string name="no">否</string>
    <string name="open_file">打开文件</string>
    <string name="setDefault">默认</string>
    <string name="doneDefaultSet">设置默认值</string>
    <string name="cancelDefaultSet">取消默认值</string>

</resources>