<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/cell_selection_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:ems="10"
            android:hint="@string/cell_selection_new_option" />

        <CheckBox
            android:id="@+id/chkSetDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setDefault" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_cell_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05" >
    </ListView>

    <Button
        android:id="@+id/btn_cell_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update" />

</LinearLayout>